Fin question 4 et 5

--- a/tp3/makefile
+++ b/tp3/makefile
@@ -2,10 +2,16 @@ CC = gcc
 CFLAGS = -W -Wall -pedantic -g
 LDFLAGS = -lm
 
-OBJ = testarbre.o arbre.o pile.o file.o
+OBJ = testarbre.o arbre.o pile.o file.o autresFonctions.o arbrePere.o
 
 prog : $(OBJ)
 	$(CC) $(OBJ) $(LDFLAGS) -o prog
+
+arbrePere.o : arbrePere.h arbrePere.c
+	$(CC) -c arbrePere.c $(CFLAGS)
+
+autresFonctions.o : autresFonctions.h autresFonctions.c noeud.h
+	$(CC) -c autresFonctions.c $(CFLAGS)
 
 file.o : file.h file.c noeud.h
 	$(CC) -c file.c $(CFLAGS)
@@ -13,7 +19,7 @@ file.o : file.h file.c noeud.h
 pile.o : pile.h pile.c noeud.h
 	$(CC) -c pile.c $(CFLAGS)
 	
-arbre.o : noeud.h arbre.c pile.h arbre.h
+arbre.o : noeud.h arbre.c pile.h arbre.h file.h
 	$(CC) -c arbre.c $(CFLAGS)
 
 testarbre.o : arbre.h arbre.c testarbre.c
